<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="skips">Skips Left: </string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="action_settings">Settings</string>


    <string name="question_1">Donegal won their first All Ireland football final in 1992.</string>
    <string name="question_2">Letterkenny is home to Finn Harps soccer club.</string>
    <string name="question_3">Donegal Town is the capital town of Donegal.</string>
    <string name="question_4">Donegal is Ireland\'s most northerly county.</string>
    <string name="question_5">Ballyshannon is the oldest town in Ireland.</string>
    <string name="question_6">Tory Island is the only place in Ireland that still has it\'s own King.</string>
    <string name="question_7">The largest fishing harbour in Europe is found in Killybegs.</string>
    <string name="question_8">Donegal is full of wile handlin\'s, rare bucks, and headers, hi.</string>
    <string name="question_9">It is customary to give a variety of salutes when passing a car in Donegal.</string>
    <string name="question_10">Donegal has some of the most renowned surfing beaches in Europe.</string>


    <string name="end_results">Quiz Results</string>
    <string name="correct_values">Correct Answers:</string>
    <string name="incorrect_values">Incorrect Answers:</string>
    <string name="time_total">Time Taken:</string>
    <string name="restart">Restart Quiz</string>
    <string name="share">Share Results</string>

    <string name="quiz_home">The Donegal Quiz</string>
    <string name="start_quiz">Start the Quiz!</string>
    <string name="return_home">Return to Home Screen!</string>
    <string name="quiz_rules">Rules</string>
    <string name="rules_info">The questions are all True or False.\nYou have to answer 7 questions.\nYou are allowed to skip 3 questions.</string>

</resources>
