<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_results"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aidenbarrett.geoquiz.ResultsActivity"
    android:background="@android:color/holo_green_dark">

    <!--Display Results Banner-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/end_results"
        android:text="@string/end_results"
        android:textSize="40dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_orange_light"/>

    <!--Display Correct Answers Layout-->

    <!--Display Incorrect Answers Layout-->

    <!--Display Button for Starting Quiz-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

    </LinearLayout>

    <!--Display Two Buttons for Retake and Share-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout2">
        <Button
            android:id="@+id/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart"
            android:backgroundTint="@android:color/holo_orange_light" />
        <Button
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:layout_marginLeft="5dp"
            android:backgroundTint="@android:color/holo_orange_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="28dp"
        android:id="@+id/correct_ans_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/timer_position"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/correct_values"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correct_values"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="28dp"
        android:id="@+id/timer_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/end_results"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/time_total"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_taken"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="23dp"
        android:id="@+id/incorrect_ans_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/correct_ans_position"
        android:layout_alignLeft="@+id/correct_ans_position"
        android:layout_alignStart="@+id/correct_ans_position">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/incorrect_values"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incorrect_values"
            android:textSize="20dp"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

</RelativeLayout>
