<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rules"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aidenbarrett.geoquiz.HomeActivity"
    android:background="@android:color/holo_green_dark">

    <!--Display Button for Returning to Home Screen-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true">
        <Button
            android:id="@+id/return_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/return_home"
            android:backgroundTint="@android:color/holo_orange_light" />
    </LinearLayout>

    <!--Display Home Banner-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rules"
        android:text="@string/quiz_rules"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:textColor="@android:color/holo_orange_light"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rules_info"
        android:text="@string/rules_info"
        android:textSize="20dp"
        android:layout_below="@id/rules"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_orange_light"
        />

</RelativeLayout>